# controller/user_controller.go
@@ -12,7 +12,9 @@ import (
 )
 
 type userController struct {
-	userService service.UserService
+	userService     service.UserService
+	customerService service.CustomerService
+	employeeService service.EmployeeService
 }
 
 type UserController interface {
@@ -121,6 +123,31 @@ func (c *userController) CreateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	u, err := c.userService.GetByUsername(newUser.Username)
+	if err != nil {
+		internalServerErrorResponse(w, r, err)
+		return
+	}
+	if newUser.Role == "customer" {
+		err := c.customerService.CreateCustomer(&model.Customer{
+			UserId: u.Id,
+		})
+		if err != nil {
+			internalServerErrorResponse(w, r, err)
+			return
+		}
+	}
+
+	if newUser.Role == "staff" {
+		err := c.employeeService.CreateEmployee(&model.Employee{
+			UserId: u.Id,
+		})
+		if err != nil {
+			internalServerErrorResponse(w, r, err)
+			return
+		}
+	}
+
 	jsonResponse = &model.CreateResponse{
 		Username:    userResponse.Username,
 		Role:        userResponse.Role,
@@ -128,6 +155,8 @@ func (c *userController) CreateUser(w http.ResponseWriter, r *http.Request) {
 		Message:     "OK",
 		Success:     true,
 	}
+
+	render.JSON(w, r, jsonResponse)
 }
 
 // DeleteUser deletes user with UserID
@@ -302,7 +331,9 @@ func (c *userController) LoginWithToken(w http.ResponseWriter, r *http.Request) 
 
 func NewUserController() userController {
 	return userController{
-		userService: service.NewUserService(),
+		userService:     service.NewUserService(),
+		customerService: service.NewCustomerService(),
+		employeeService: service.NewEmployeeService(),
 	}
 }
 
